윈도우 외의 환경에서 LuaSocket이 컴파일 되지 않던 오류 수정

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,9 @@ include_directories("./include" "./extlib")
 file(GLOB_RECURSE SOURCE_LIST "./src/*.cpp" "./extlib/*.c" "./extlib/*.cpp")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})
 
+if(WIN32)
+    link_libraries(ws2_32)
+endif()
+
 add_executable(${PROJECT_NAME} ${SOURCE_LIST})
 install(TARGETS ${PROJECT_NAME} DESTINATION "bin")
